--- a/css/style.css
+++ b/css/style.css
@@ -183,10 +183,43 @@
     padding-left: 70px;
 }
 
+.find_your_button {
+    padding: 0 100px;
+}
+
+.how_dream_job_title {
+    font-size: 45px;
+}
+
 @media (max-width: 768px) {
-    .how_it_works{
+    .company_header {
+        font-size: 28px !important;
+    }
+
+    .how_dream_job_title {
+        font-size: 28px !important;
+    }
+
+    .hero-title {
+        font-size: 28px !important;
+    }
+
+    .highlight::before {
+        display: none !important;
+    }
+
+    .find_your_button {
+        padding: 10px 20px;
+    }
+
+    .star_img {
+        width: 120px !important;
+    }
+
+    .how_it_works {
         width: 100%;
     }
+
     .banner_text {
         padding-left: 20px !important;
     }
@@ -369,7 +402,7 @@
     position: relative;
 }
 
-.highlight::before {
+/* .highlight::before {
     content: '';
     position: absolute;
     top: 41%;
@@ -380,7 +413,7 @@
     opacity: 1;
     z-index: 0;
     background-repeat: no-repeat;
-}
+} */
 
 .hero-section .container {
     z-index: 1;
@@ -469,14 +502,15 @@
 }
 
 /* footer logos */
- .star--normal {
+.star--normal {
     height: 1em !important;
     line-height: 1em !important;
     margin-right: .1111111111em !important;
     min-width: 1em !important;
     width: 1em !important;
 }
- .star {
+
+.star {
     color: #fff !important;
     height: 1em !important;
     line-height: 1em !important;
@@ -488,8 +522,9 @@
     width: 1em !important;
     float: left;
 }
+
 /* footer logos */
-.how_it_works{
+.how_it_works {
     max-width: 440px;
     width: 100%;
 }
